--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,36 @@
 }
 body {
   height: 100vh;
-  background: pink;
+  background: #060ab2;
+  display: flex;
 }
+.memory-game {
+  width: 640px;
+  height: 640px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+.memory-card {
+  width: calc(25% - 10px);
+  height: calc(33.33% - 10px);
+  margin: 5px;
+  position: relative;
+  transform: scale(1);
+}
+.front-face,
+.back-face {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  border-radius: 5px;
+  position: absolute;
+  background: #1c7ccc;
+}
+.memory-card:active {
+  transform: scale(0.97);
+  transition: transform 0.2s;
+}
+/* img {
+  width: 100px;
+} */
