add flip effect to all cards when clicked

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   margin: auto;
   display: flex;
   flex-wrap: wrap;
+  perspective: 1000px;
 }
 .memory-card {
   width: calc(25% - 10px);
@@ -21,6 +22,8 @@ body {
   margin: 5px;
   position: relative;
   transform: scale(1);
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
 }
 .front-face,
 .back-face {
@@ -30,10 +33,17 @@ body {
   border-radius: 5px;
   position: absolute;
   background: #1c7ccc;
+  backface-visibility: hidden;
+}
+.front-face {
+  transform: rotateY(180deg);
 }
 .memory-card:active {
   transform: scale(0.97);
   transition: transform 0.2s;
+}
+.memory-card.flip {
+  transform: rotateY(180deg);
 }
 /* img {
   width: 100px;
